fix: remove wrap-instructor-info css to correctly display staff buttons on Show Answer (#85)
* fix: wrap-instructor-info css to correctly display staff buttons on Show Answer

* fix: remove wrap-instructor-info from here and add in ol-openedx-chat

--- a/lms/static/sass/partials/lms/theme/_extras.scss
+++ b/lms/static/sass/partials/lms/theme/_extras.scss
@@ -639,12 +639,7 @@ body.view-in-course {
     font-size: 18px !important;
 }
 }
-@media (min-width: 768px) {
-  .wrap-instructor-info {
-    display: flex !important;
-    gap: 10px;
-  }
-}
+
 .wrap-instructor-info .instructor-info-action {
   margin-left: 0px !important;
 }
